<resources>
    <string name="app_name">iKleen</string>
    <string name="motto">Your laundry and dry cleaning</string>
    <string name="motto_line2">never felt this easy.</string>
    <string name="pickup">Schedule Pickup</string>
    <string name="hand_clothes">Hand clothes to driver</string>
    <string name="relax">Relax and enjoy!</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <!--LOGIN-->

    <string name="title_activity_login">Log in</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_retype_password">Retype Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_sign_in_short">Log in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_user_exists">This email address is already in use</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_weak_password">This password is too weak</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="action_login">"Log In"</string>
    <string name="action_create_account">Create Account</string>
    <string name="Rs">\u20B9</string>

    <string name="email_us">Still confused? <u>Email us</u></string>

</resources>
