<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context="org.huzaifa.ikleen.MainActivity">


    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/signup_header"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="0.5"
            android:background="@drawable/button_background2"
            android:text="@string/action_sign_up"
            android:textAllCaps="false"
            android:textColor="@color/gray"
            android:textSize="17sp"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/login_header"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="0.5"
            android:background="@drawable/button_background2_selected"
            android:text="@string/action_login"
            android:textAllCaps="false"
            android:textColor="#ffff"
            android:textSize="17sp"
            android:textStyle="bold" />

    </LinearLayout>


    <!--Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />


    <!-- <LinearLayout
         android:id="@+id/email_login_form"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
         android:orientation="vertical"> -->

    <!--<android.support.design.widget.TextInputLayout
        android:id="@+id/email_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"> -->

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/edit_text_bg"
        android:drawableLeft="@drawable/email"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:nextFocusLeft="@id/email"
        android:nextFocusUp="@id/email"
        android:singleLine="true" />

    <!--</android.support.design.widget.TextInputLayout> -->

    <!--<android.support.design.widget.TextInputLayout
        android:id="@+id/password_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"> -->

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/email"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/edit_text_bg"
        android:drawableLeft="@drawable/password"
        android:hint="@string/prompt_password"
        android:imeActionId="@+id/login"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:nextFocusLeft="@id/password"
        android:nextFocusUp="@id/password"
        android:singleLine="true" />

    <!-- </android.support.design.widget.TextInputLayout> -->

    <!--</LinearLayout> -->

    <!-- <Button
         android:id="@+id/email_sign_in_button"
         style="?android:textAppearanceSmall"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="@string/action_sign_in"
         android:textStyle="bold" /> -->

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/sign_in_button"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:background="@drawable/button_background_selected"
        android:text="@string/action_login"
        android:textAllCaps="false"
        android:textColor="#ffff"
        android:textSize="17sp" />

</RelativeLayout>